SET(SOURCES ui_PasteurizerChiller.c
    ui_PasteurizerChillerAuto.c
    ui_PasteurizerChillerLog.c
    ui_theme_manager.c
    ui_themes.c
    ui.c
    ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    ui_img_418309003.c
    ui_img_1324469499.c
    ui_img_chilling_png.c)

add_library(ui ${SOURCES})
